--- a/task-02.html
+++ b/task-02.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <style>
       .item {
-        font-weight: 500;
-      }
+        font-weight: 500;}
 
       .item:not(:last-child) {
         margin-bottom: 8px;
